@@ -24,17 +24,5 @@
 				<File>@INSTALL_ROOT@/var/opendnssec/signed/ods2</File>
 			</Output>
 		</Adapters>
-	</Zone>	
-	<Zone name="ods3">
-		<Policy>bill</Policy>
-		<SignerConfiguration>@INSTALL_ROOT@/var/opendnssec/signconf/ods3.xml</SignerConfiguration>
-		<Adapters>
-			<Input>
-				<File>@INSTALL_ROOT@/var/opendnssec/unsigned/ods3</File>
-			</Input>
-			<Output>
-				<File>@INSTALL_ROOT@/var/opendnssec/signed/ods3</File>
-			</Output>
-		</Adapters>
 	</Zone>
 </ZoneList>
